ADD: Inhaltskapitel und Strukturierung der Arbeit

--- a/ba_binder.tex
+++ b/ba_binder.tex
@@ -63,12 +63,17 @@
 \include{chapters/standdertechnik}
 % TODO create chapter files and remove this placeholders
 % TODO glsresetall should be called before every chapter to explain each acronym again on first appearence
-\chapter{Erstes Inhaltskapitel}
-\chapter{Weitere(s) Inhaltskapitel}
-%
+\include{chapters/demonstrator}
 \glsresetall
 \include{chapters/projektteam}
-
+\glsresetall
+\include{chapters/go_microservice}
+\glsresetall
+\include{chapters/entwicklungsprozess}
+\glsresetall
+\include{chapters/praxisaufgabe}
+\glsresetall
+\include{chapters/fazit}
 %
 % add appendix
 %
